--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -1,151 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_back_arrow"
-        tools:layout_editor_absoluteX="14dp"
-        tools:layout_editor_absoluteY="14dp" />
+        android:layout_width="53dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_back_arrow" />
 
     <ImageButton
         android:id="@+id/profile_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/baseline_person_24"
-        tools:layout_editor_absoluteX="359dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/baseline_person_24" />
 
 
-    <TextView
-        android:id="@+id/group1"
-        android:layout_width="wrap_content"
-        android:layout_height="49dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Group 1"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteY="909dp" />
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="61dp"
+        android:layout_height="52dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_add" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/back_button">
+
+        <LinearLayout
+            android:id="@+id/GroupLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/GroupLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/GroupLayout1"
+            tools:layout_editor_absoluteX="136dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/GroupLayout2"
+            tools:layout_constraintTop_toBottomOf="@id/GroupLayout2"
+            tools:layout_editor_absoluteX="411dp">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="34sp" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/groupContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_height="match_parent"
+        android:layout_below="@id/back_button"
+        android:layout_marginBottom="52dp"
+        android:orientation="vertical"/>
 
-        <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="61dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="79dp"
-            android:layout_marginEnd="77dp"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@android:drawable/ic_input_add" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/person1"
-                android:layout_width="101dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="87dp"
-                android:layout_marginTop="144dp"
-                android:layout_marginBottom="145dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Person 1"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/amount1"
-                android:layout_width="101dp"
-                android:layout_height="46dp"
-                android:layout_marginStart="1dp"
-                android:layout_marginTop="150dp"
-                android:layout_marginBottom="149dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="- $ amount"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/person2"
-                android:layout_width="0dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="74dp"
-                android:layout_marginEnd="1dp"
-                android:layout_marginBottom="69dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Person 2"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/amount2"
-                android:layout_width="0dp"
-                android:layout_height="51dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="295dp"
-                android:layout_marginEnd="2dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="- $ amount"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/person3"
-                android:layout_width="0dp"
-                android:layout_height="47dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="70dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginBottom="71dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Person 3"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/amount3"
-                android:layout_width="101dp"
-                android:layout_height="51dp"
-                android:layout_marginStart="116dp"
-                android:layout_marginTop="73dp"
-                android:layout_marginEnd="116dp"
-                android:layout_marginBottom="67dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="+ $ amount"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/add_group_member_button"
-            android:layout_width="232dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="78dp"
-            android:layout_marginBottom="126dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Add Group Member"
-            android:textSize="24sp" />
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
