--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -53,6 +53,15 @@
         app:layout_constraintStart_toStartOf="@+id/group_2_button"
         app:layout_constraintTop_toBottomOf="@+id/group_2_button" />
 
+    <Button
+        android:id="@+id/add_group_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:text="Add Group"
+        app:layout_constraintStart_toStartOf="@+id/group_3_button"
+        app:layout_constraintTop_toBottomOf="@+id/group_3_button" />
+
     <TextView
         android:id="@+id/total_amount"
         android:layout_width="0dp"
