--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -13,6 +13,17 @@
         android:layout_marginTop="24dp"
         android:src="@drawable/ic_back_arrow" />
 
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Group 1"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
+
     <ImageButton
         android:id="@+id/profile_button"
         android:layout_width="wrap_content"
@@ -48,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="Person 1"
                 android:textSize="34sp" />
 
             <TextView
@@ -56,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text=" $ -amount"
                 android:textSize="34sp" />
         </LinearLayout>
 
@@ -73,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="Person 2"
                 android:textSize="34sp" />
 
             <TextView
@@ -81,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="$ -amount"
                 android:textSize="34sp" />
         </LinearLayout>
 
@@ -99,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="Person 1"
                 android:textSize="34sp" />
 
             <TextView
@@ -107,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="$ +amount"
                 android:textSize="34sp" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
