--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -12,7 +12,7 @@
     tools:context=".CreateGroup">
 
     <EditText
-        android:id="@+id/EnterMemberUsername"
+        android:id="@+id/enterMemberUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -27,6 +27,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <EditText
+        android:id="@+id/enterGroupName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="24dp"
+        android:autofillHints="enter_members_usernames"
+        android:hint="@string/enter_group_name"
+        android:inputType="text"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/CreateGroupButton"
