--- a/app/src/main/res/layout/add_transaction.xml
+++ b/app/src/main/res/layout/add_transaction.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addTransaction"
@@ -15,85 +15,95 @@
         android:text="@string/add_transaction"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/enterDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/enter_description"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:hint="@string/enter_description"
+        app:layout_constraintTop_toBottomOf="@id/addTransaction2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTransaction2" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/enterAmount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/enter_amount"
-        app:layout_constraintStart_toStartOf="@+id/enterDescription"
-        app:layout_constraintTop_toBottomOf="@+id/enterDescription" />
+        android:hint="@string/enter_amount"
+        app:layout_constraintTop_toBottomOf="@id/enterDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextNumberDecimal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="@string/splitPercentage"
+        app:layout_constraintTop_toBottomOf="@id/enterAmount"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Spinner
+        android:id="@+id/selectGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/editTextNumberDecimal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/useCamera"
-        android:layout_width="wrap_content"
+        android:id="@+id/selectPerson"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/use_camera"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Select Person(s)"
+        app:layout_constraintTop_toBottomOf="@id/selectGroup"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/equalSplit" />
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/customSplit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:text="@string/custom_split"
-        app:layout_constraintBaseline_toBaselineOf="@+id/equalSplit"
-        app:layout_constraintEnd_toStartOf="@+id/equalSplit"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/selectPerson"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/equalSplit" />
 
     <Button
         android:id="@+id/equalSplit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="210dp"
         android:text="@string/equal_split"
-        app:layout_constraintBottom_toTopOf="@+id/useCamera"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/customSplit"
-        app:layout_constraintTop_toBottomOf="@+id/selectPerson" />
+        app:layout_constraintTop_toBottomOf="@id/selectPerson"
+        app:layout_constraintStart_toEndOf="@id/customSplit"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Spinner
-        android:id="@+id/selectGroup"
+    <Button
+        android:id="@+id/addTransaction3"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="269dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/selectPerson"
-        app:layout_constraintEnd_toEndOf="@+id/selectPerson"
-        app:layout_constraintStart_toStartOf="@+id/selectPerson"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Spinner
-        android:id="@+id/selectPerson"
-        android:layout_width="206dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="38dp"
-        app:layout_constraintBottom_toTopOf="@+id/equalSplit"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/add_transaction"
+        app:layout_constraintTop_toBottomOf="@id/equalSplit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectGroup" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/useCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="@string/use_camera"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
