--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -11,36 +11,61 @@
     android:paddingBottom="@dimen/fragment_vertical_margin"
     tools:context=".CreateGroup">
 
-    <EditText
-        android:id="@+id/enterMemberUsername"
-        android:layout_width="0dp"
+    <!--    <TextView-->
+    <!--        android:id="@+id/username_label"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginBottom="8dp"-->
+    <!--        android:text="@string/enter_members_usernames"-->
+    <!--        android:textSize="14sp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@+id/enterMemberUsername"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/enterMemberUsername"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="@+id/enterMemberUsername" />-->
+
+    <!--    <EditText-->
+    <!--        android:id="@+id/enterMemberUsername"-->
+    <!--        android:layout_width="156dp"-->
+    <!--        android:layout_height="41dp"-->
+    <!--        android:layout_marginStart="24dp"-->
+    <!--        android:layout_marginTop="84dp"-->
+    <!--        android:layout_marginEnd="24dp"-->
+    <!--        android:autofillHints="enter_members_usernames"-->
+    <!--        android:hint="@string/enter_members_usernames"-->
+    <!--        android:inputType="text"-->
+    <!--        android:selectAllOnFocus="true"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.948"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <TextView
+        android:id="@+id/GroupName_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="24dp"
-        android:autofillHints="enter_members_usernames"
-        android:hint="@string/enter_members_usernames"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="93dp"
+        android:layout_marginBottom="69dp"
+        android:text="@string/enter_group_name"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/selectMembers"
+        app:layout_constraintEnd_toStartOf="@+id/enterGroupName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
         android:id="@+id/enterGroupName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="198dp"
+        android:layout_height="58dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="enter_members_usernames"
+        android:autofillHints="enter_group_name"
         android:hint="@string/enter_group_name"
         android:inputType="text"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,6 +78,18 @@
         android:text="@string/create_group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/selectMembers"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="496dp"
+        android:text="select Group Members"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/GroupName_label"
+        app:layout_constraintTop_toBottomOf="@+id/GroupName_label" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
