--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -44,7 +44,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
-
+        <TextView
+            android:id="@+id/name_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Name:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/name"
+            app:layout_constraintEnd_toStartOf="@+id/name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/name" />
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -52,8 +63,19 @@
             android:layout_marginBottom="25dp"
             android:ems="10"
             android:inputType="text"
-            android:text="Name" />
-
+             />
+        <TextView
+            android:id="@+id/email_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Email:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/email"
+            app:layout_constraintEnd_toStartOf="@+id/email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/email" />
         <EditText
             android:id="@+id/email"
             android:layout_width="wrap_content"
@@ -62,25 +84,59 @@
             android:layout_marginBottom="24dp"
             android:ems="10"
             android:inputType="text"
-            android:text="Email" />
-
+             />
+        <TextView
+            android:id="@+id/username_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Username:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/username"
+            app:layout_constraintEnd_toStartOf="@+id/username"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/username" />
         <EditText
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="33dp"
-            android:ems="10"
+            android:ems="5"
             android:inputType="text"
-            android:text="Username" />
-
+            />
+        <TextView
+            android:id="@+id/password_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Password:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/password"
+            app:layout_constraintEnd_toStartOf="@+id/password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username"
+            app:layout_constraintTop_toTopOf="@+id/password" />
         <EditText
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="Password" />
+            android:inputType="textPassword"
+             />
+        <TextView
+            android:id="@+id/confirm_password_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="confirm_password:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/password"
+            app:layout_constraintEnd_toStartOf="@+id/password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username"
+            app:layout_constraintTop_toTopOf="@+id/password" />
 
         <EditText
             android:id="@+id/confirm_password"
@@ -89,8 +145,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="30dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="Confirm Password" />
+            android:inputType="textPassword"
+            />
 
         <Button
             android:id="@+id/sign_up_button"
