--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#0D1B2A"
     android:layout_height="match_parent">
 
 
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:textColor="#FFFFFF"
         android:text="@string/change_password"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -24,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#354C61"
         android:text="@string/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +39,7 @@
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="22dp"
         android:ems="10"
+        android:textColor="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/newPass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +64,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="3dp"
         android:ems="10"
+        android:textColor="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/confirm"
@@ -69,6 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="14dp"
+        android:textColor="#FFFFFF"
         android:text="@string/current_password"
         app:layout_constraintBaseline_toBaselineOf="@+id/currentPassword"
         app:layout_constraintEnd_toStartOf="@+id/currentPassword"
@@ -81,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="255dp"
+        android:textColor="#FFFFFF"
         android:text="@string/new_password"
         app:layout_constraintEnd_toStartOf="@+id/newPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
+        android:textColor="#FFFFFF"
         android:text="@string/confirm_password"
         app:layout_constraintBaseline_toBaselineOf="@+id/confirmPassword"
         app:layout_constraintEnd_toStartOf="@+id/confirmPassword"
@@ -103,6 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
+        android:textColor="#FFFFFF"
         android:text="@string/notifications"
         app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
@@ -112,6 +122,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#354C61"
         android:text="Change password"
         app:layout_constraintEnd_toEndOf="@+id/notifications"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
