--- a/app/src/main/res/layout/activity_add_budget_item.xml
+++ b/app/src/main/res/layout/activity_add_budget_item.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#0D1B2A"
     android:padding="16dp">
 
     <!-- Back Button -->
     <ImageView
         android:id="@+id/backButton"
+        android:backgroundTint="#354C61"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
@@ -23,7 +24,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/personal_budgeting_title"
         android:textSize="24sp"
-        android:textColor="#000000"/>
+        android:textColor="#FFFFFF"/>
 
     <!-- Amount Input Field -->
 
@@ -45,6 +46,7 @@
             android:background="@android:color/transparent"
             android:hint="@string/amount_input"
             android:inputType="numberDecimal"
+            android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
         <ImageView
@@ -72,6 +74,7 @@
             android:layout_weight="1"
             android:hint="@string/budget_category_input"
             android:inputType="text"
+            android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:background="@android:color/transparent" />
 
@@ -92,6 +95,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/add"
         android:textColor="#FFFFFF"
+        android:backgroundTint="#354C61"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:paddingTop="8dp"
