--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#0D1B2A"
     android:padding="16dp">
     <!--Back Button-->
     <ImageView
         android:id="@+id/backButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:textColor="#FFFFFF"
+        android:background="#0D1B2A"
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_back_arrow"/>
@@ -20,6 +22,7 @@
         android:layout_height="wrap_content"
         android:text="@string/history_title"
         android:textSize="32sp"
+        android:textColor="#FFFFFF"
         android:fontFamily="sans-serif-medium"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp" />
@@ -27,6 +30,8 @@
     <!-- Transaction List Container -->
     <FrameLayout
         android:id="@+id/fragmentContainer"
+        android:textColor="#FFFFFF"
+        android:background="#0D1B2A"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/historyTitle"
@@ -37,6 +42,8 @@
     <!-- Fragment Switching -->
     <LinearLayout
         android:id="@+id/bottom_navigation"
+        android:textColor="#FFFFFF"
+        android:background="#0D1B2A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
