--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+    android:background="#0D1B2A"
     android:layout_height="wrap_content">
 
     <ImageButton
@@ -10,6 +11,7 @@
         android:layout_width="53dp"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
+        android:backgroundTint="#354C61"
         android:layout_marginTop="24dp"
         android:src="@drawable/ic_back_arrow" />
 
@@ -22,19 +24,21 @@
         android:text="Group 1"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"/>
+        android:textColor="#FFFFFF"/>
 
     <ImageButton
         android:id="@+id/profile_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:backgroundTint="#354C61"
         android:layout_marginTop="24dp"
         android:src="@drawable/baseline_person_24" />
 
 
     <ImageButton
         android:id="@+id/imageButton4"
+        android:backgroundTint="#354C61"
         android:layout_width="61dp"
         android:layout_height="52dp"
         android:layout_alignParentBottom="true"
@@ -125,9 +129,11 @@
 
     <LinearLayout
         android:id="@+id/groupContainer"
+        android:textColor="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/back_button"
+        android:backgroundTint="#354C61"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="52dp"
         android:orientation="vertical" />
